防火墙项目/防火墙/linux端代码/iptables默认规则/iptables.up.rules
# Generated by iptables-save v1.4.12 on Wed Apr 19 10:58:13 2017
*filter
:INPUT ACCEPT [9181:8268521]
:FORWARD ACCEPT [212542:118921415]
:OUTPUT ACCEPT [751:142921]
-A INPUT -p udp -m udp --dport 22222 -j NFLOG --nflog-group 10 --nflog-range 100
-A INPUT -p tcp -m tcp --dport 33333 -j NFLOG --nflog-group 10 --nflog-range 100
-A INPUT -p tcp -m tcp --dport 22222 -j NFLOG --nflog-group 10 --nflog-range 100
-A INPUT -p udp -m udp --dport 33333 -j NFLOG --nflog-group 10 --nflog-range 100
-A FORWARD -p tcp -m tcp --dport 22222 -j NFLOG --nflog-group 10 --nflog-range 100
-A FORWARD -p udp -m udp --dport 22222 -j NFLOG --nflog-group 10 --nflog-range 100
-A FORWARD -p tcp -m tcp --dport 33333 -j NFLOG --nflog-group 10 --nflog-range 100
-A FORWARD -p udp -m udp --dport 33333 -j NFLOG --nflog-group 10 --nflog-range 100
-A FORWARD -j DROP
#-A FORWARD -p tcp --dport 502 -m modbusTcp --data-addr 12292:12292 --modbus-func 6 -j LOG --log-prefix "DROP&modbus&data_illegal "
COMMIT
# Completed on Wed Apr 19 10:58:13 2017
